fix: videos play full width on mobile

--- a/src/components/VideoPlayer/VideoPlayer.module.css
+++ b/src/components/VideoPlayer/VideoPlayer.module.css
@@ -13,7 +13,7 @@ video{
 
   @media (max-width: $mantine-breakpoint-sm) {
     display:flex;
-
+    min-width: auto;
     height: auto; 
     margin: auto;
     align-content: center;
